--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "joi": "^17.6.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
+    "use-modal-hook": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
